[gd_scene load_steps=6 format=2]

[ext_resource path="res://mystic_woods_free_v0.2/sprites/tilesets/TX Props.png" type="Texture" id=1]
[ext_resource path="res://Scenes/physics_object/physic_object.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Door.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.5, 17 )

[sub_resource type="CircleShape2D" id=2]
radius = 19.0

[node name="Door" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( -0.5, 22 )
shape = SubResource( 1 )

[node name="Sprite" parent="." index="1"]
position = Vector2( -2, 0 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 23, 102, 46, 51 )

[node name="Sprite2" type="Sprite" parent="." index="2"]
visible = false
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 24, 165, 48, 55 )

[node name="Area2D" type="Area2D" parent="." index="3"]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
position = Vector2( 0, 23 )
shape = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
